// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CompatSessionDetail> > renders a compatability session details 1`] = `
<div>
  <div
    class="_blockList_f8cc7f"
  >
    <header
      class="_header_92353c"
    >
      <a
        class="_backButton_92353c"
        href="/sessions"
      >
        <svg
          class="cpd-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.3 17.3-4.6-4.6a.877.877 0 0 1-.212-.325A1.107 1.107 0 0 1 8.425 12c0-.133.02-.258.063-.375A.877.877 0 0 1 8.7 11.3l4.6-4.6a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275.948.948 0 0 1 .275.7.948.948 0 0 1-.275.7L10.8 12l3.9 3.9a.948.948 0 0 1 .275.7.948.948 0 0 1-.275.7.948.948 0 0 1-.7.275.949.949 0 0 1-.7-.275Z"
          />
        </svg>
      </a>
      <h3
        class="_typography_yh5dq_162 _font-heading-md-semibold_yh5dq_121"
      >
        abcd1234
      </h3>
    </header>
    <div
      class="_block_17898c"
    >
      <h4
        class="_typography_yh5dq_162 _font-heading-sm-semibold_yh5dq_102 _title_17898c"
      >
        Session
      </h4>
      <div
        class="_wrapper_040867"
      >
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Last Active
          </h5>
          <span
            class="_datumValue_040867"
            title="Sat, 29 Jul 2023, 03:35"
          >
            Inactive for 90+ days
          </span>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Signed in
          </h5>
          <time
            class="_datumValue_040867"
            datetime="2023-06-29T03:35:17Z"
          >
            Thu, 29 Jun 2023, 03:35
          </time>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Device ID
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 _datumValue_040867"
          >
            abcd1234
          </p>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            IP Address
          </h5>
          <code
            class="_datumValue_040867"
          >
            1.2.3.4
          </code>
        </div>
      </div>
    </div>
    <div
      class="_block_17898c"
    >
      <h4
        class="_typography_yh5dq_162 _font-heading-sm-semibold_yh5dq_102 _title_17898c"
      >
        Client info
      </h4>
      <div
        class="_wrapper_040867"
      >
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Name
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 _datumValue_040867"
          >
            element.io
          </p>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Uri
          </h5>
          <a
            class="_link_1mzip_17 _externalLink_a97355"
            data-kind="primary"
            href="https://element.io"
            rel="noreferrer noopener"
            target="_blank"
          >
            https://element.io
          </a>
        </div>
      </div>
    </div>
    <button
      aria-controls="radix-:r0:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="_button_dyfp8_17 _has-icon_dyfp8_55 _destructive_dyfp8_99"
      data-kind="secondary"
      data-size="sm"
      data-state="closed"
      role="button"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 12.031a.97.97 0 0 1 .287-.712.968.968 0 0 1 .713-.289h7.15l-1.875-1.875a.96.96 0 0 1-.3-.7c0-.266.108-.508.325-.725a.93.93 0 0 1 .712-.287.977.977 0 0 1 .688.287l3.6 3.6c.1.1.17.209.212.325.042.117.063.242.063.375 0 .134-.02.259-.063.375a.877.877 0 0 1-.212.325l-3.6 3.6a.93.93 0 0 1-.712.288.977.977 0 0 1-.688-.288 1.02 1.02 0 0 1-.313-.712.93.93 0 0 1 .288-.713l1.875-1.875H10a.968.968 0 0 1-.713-.287A.968.968 0 0 1 9 12.03Zm-6-7c0-.55.196-1.02.587-1.412A1.926 1.926 0 0 1 5 3.03h6a.97.97 0 0 1 .713.288.968.968 0 0 1 .287.712.97.97 0 0 1-.287.713.968.968 0 0 1-.713.287H5v14h6a.97.97 0 0 1 .713.288.968.968 0 0 1 .287.712.97.97 0 0 1-.287.713.968.968 0 0 1-.713.287H5c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 3 19.03v-14Z"
        />
      </svg>
      Sign out
    </button>
  </div>
</div>
`;

exports[`<CompatSessionDetail> > renders a compatability session without an ssoLogin 1`] = `
<div>
  <div
    class="_blockList_f8cc7f"
  >
    <header
      class="_header_92353c"
    >
      <a
        class="_backButton_92353c"
        href="/sessions"
      >
        <svg
          class="cpd-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.3 17.3-4.6-4.6a.877.877 0 0 1-.212-.325A1.107 1.107 0 0 1 8.425 12c0-.133.02-.258.063-.375A.877.877 0 0 1 8.7 11.3l4.6-4.6a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275.948.948 0 0 1 .275.7.948.948 0 0 1-.275.7L10.8 12l3.9 3.9a.948.948 0 0 1 .275.7.948.948 0 0 1-.275.7.948.948 0 0 1-.7.275.949.949 0 0 1-.7-.275Z"
          />
        </svg>
      </a>
      <h3
        class="_typography_yh5dq_162 _font-heading-md-semibold_yh5dq_121"
      >
        abcd1234
      </h3>
    </header>
    <div
      class="_block_17898c"
    >
      <h4
        class="_typography_yh5dq_162 _font-heading-sm-semibold_yh5dq_102 _title_17898c"
      >
        Session
      </h4>
      <div
        class="_wrapper_040867"
      >
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Last Active
          </h5>
          <span
            class="_datumValue_040867"
            title="Sat, 29 Jul 2023, 03:35"
          >
            Inactive for 90+ days
          </span>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Signed in
          </h5>
          <time
            class="_datumValue_040867"
            datetime="2023-06-29T03:35:17Z"
          >
            Thu, 29 Jun 2023, 03:35
          </time>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Device ID
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 _datumValue_040867"
          >
            abcd1234
          </p>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            IP Address
          </h5>
          <code
            class="_datumValue_040867"
          >
            1.2.3.4
          </code>
        </div>
      </div>
    </div>
    <button
      aria-controls="radix-:r3:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="_button_dyfp8_17 _has-icon_dyfp8_55 _destructive_dyfp8_99"
      data-kind="secondary"
      data-size="sm"
      data-state="closed"
      role="button"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 12.031a.97.97 0 0 1 .287-.712.968.968 0 0 1 .713-.289h7.15l-1.875-1.875a.96.96 0 0 1-.3-.7c0-.266.108-.508.325-.725a.93.93 0 0 1 .712-.287.977.977 0 0 1 .688.287l3.6 3.6c.1.1.17.209.212.325.042.117.063.242.063.375 0 .134-.02.259-.063.375a.877.877 0 0 1-.212.325l-3.6 3.6a.93.93 0 0 1-.712.288.977.977 0 0 1-.688-.288 1.02 1.02 0 0 1-.313-.712.93.93 0 0 1 .288-.713l1.875-1.875H10a.968.968 0 0 1-.713-.287A.968.968 0 0 1 9 12.03Zm-6-7c0-.55.196-1.02.587-1.412A1.926 1.926 0 0 1 5 3.03h6a.97.97 0 0 1 .713.288.968.968 0 0 1 .287.712.97.97 0 0 1-.287.713.968.968 0 0 1-.713.287H5v14h6a.97.97 0 0 1 .713.288.968.968 0 0 1 .287.712.97.97 0 0 1-.287.713.968.968 0 0 1-.713.287H5c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 3 19.03v-14Z"
        />
      </svg>
      Sign out
    </button>
  </div>
</div>
`;

exports[`<CompatSessionDetail> > renders a finished compatability session details 1`] = `
<div>
  <div
    class="_blockList_f8cc7f"
  >
    <header
      class="_header_92353c"
    >
      <a
        class="_backButton_92353c"
        href="/sessions"
      >
        <svg
          class="cpd-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.3 17.3-4.6-4.6a.877.877 0 0 1-.212-.325A1.107 1.107 0 0 1 8.425 12c0-.133.02-.258.063-.375A.877.877 0 0 1 8.7 11.3l4.6-4.6a.948.948 0 0 1 .7-.275.95.95 0 0 1 .7.275.948.948 0 0 1 .275.7.948.948 0 0 1-.275.7L10.8 12l3.9 3.9a.948.948 0 0 1 .275.7.948.948 0 0 1-.275.7.948.948 0 0 1-.7.275.949.949 0 0 1-.7-.275Z"
          />
        </svg>
      </a>
      <h3
        class="_typography_yh5dq_162 _font-heading-md-semibold_yh5dq_121"
      >
        abcd1234
      </h3>
    </header>
    <div
      class="_block_17898c"
    >
      <h4
        class="_typography_yh5dq_162 _font-heading-sm-semibold_yh5dq_102 _title_17898c"
      >
        Session
      </h4>
      <div
        class="_wrapper_040867"
      >
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Last Active
          </h5>
          <span
            class="_datumValue_040867"
            title="Sat, 29 Jul 2023, 03:35"
          >
            Inactive for 90+ days
          </span>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Signed in
          </h5>
          <time
            class="_datumValue_040867"
            datetime="2023-06-29T03:35:17Z"
          >
            Thu, 29 Jun 2023, 03:35
          </time>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Device ID
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 _datumValue_040867"
          >
            abcd1234
          </p>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            IP Address
          </h5>
          <code
            class="_datumValue_040867"
          >
            1.2.3.4
          </code>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Finished
          </h5>
          <time
            datetime="2023-07-29T03:35:17Z"
          >
            Sat, 29 Jul 2023, 03:35
          </time>
        </div>
      </div>
    </div>
    <div
      class="_block_17898c"
    >
      <h4
        class="_typography_yh5dq_162 _font-heading-sm-semibold_yh5dq_102 _title_17898c"
      >
        Client info
      </h4>
      <div
        class="_wrapper_040867"
      >
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Name
          </h5>
          <p
            class="_typography_yh5dq_162 _font-body-md-regular_yh5dq_59 _datumValue_040867"
          >
            element.io
          </p>
        </div>
        <div
          class="_datum_040867"
        >
          <h5
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
          >
            Uri
          </h5>
          <a
            class="_link_1mzip_17 _externalLink_a97355"
            data-kind="primary"
            href="https://element.io"
            rel="noreferrer noopener"
            target="_blank"
          >
            https://element.io
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
